[gd_scene load_steps=40 format=3 uid="uid://da4xxv2lsbn2i"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ud55d"]
[ext_resource type="Texture2D" uid="uid://dn4oqn7fmbpmf" path="res://assets/characters/Knight1_Attack.png" id="2_1bai1"]
[ext_resource type="Texture2D" uid="uid://cf1em3geurm7t" path="res://assets/characters/Knight1_Move.png" id="3_iwe4p"]
[ext_resource type="Texture2D" uid="uid://cxts2aoymoaco" path="res://assets/characters/Knight1_Idle.png" id="4_0yhtl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ecsi7"]
atlas = ExtResource("2_1bai1")
region = Rect2(0, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_11m2w"]
atlas = ExtResource("2_1bai1")
region = Rect2(52, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf5i0"]
atlas = ExtResource("2_1bai1")
region = Rect2(104, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfwh1"]
atlas = ExtResource("2_1bai1")
region = Rect2(156, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoq60"]
atlas = ExtResource("3_iwe4p")
region = Rect2(0, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijl6f"]
atlas = ExtResource("3_iwe4p")
region = Rect2(52, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ny4"]
atlas = ExtResource("3_iwe4p")
region = Rect2(104, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxqp8"]
atlas = ExtResource("3_iwe4p")
region = Rect2(156, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_0arpi"]
atlas = ExtResource("2_1bai1")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvxom"]
atlas = ExtResource("2_1bai1")
region = Rect2(52, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_22rbf"]
atlas = ExtResource("2_1bai1")
region = Rect2(104, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4km4"]
atlas = ExtResource("2_1bai1")
region = Rect2(156, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpmiw"]
atlas = ExtResource("3_iwe4p")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kligx"]
atlas = ExtResource("3_iwe4p")
region = Rect2(52, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0hcx"]
atlas = ExtResource("3_iwe4p")
region = Rect2(104, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y3af"]
atlas = ExtResource("3_iwe4p")
region = Rect2(156, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_f35u6"]
atlas = ExtResource("4_0yhtl")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_br4ql"]
atlas = ExtResource("4_0yhtl")
region = Rect2(52, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ret6n"]
atlas = ExtResource("4_0yhtl")
region = Rect2(104, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcugi"]
atlas = ExtResource("4_0yhtl")
region = Rect2(156, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_64sgl"]
atlas = ExtResource("4_0yhtl")
region = Rect2(0, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l6vi"]
atlas = ExtResource("4_0yhtl")
region = Rect2(52, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ccjy"]
atlas = ExtResource("4_0yhtl")
region = Rect2(104, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_an2pn"]
atlas = ExtResource("4_0yhtl")
region = Rect2(156, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7py14"]
atlas = ExtResource("2_1bai1")
region = Rect2(0, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwa0h"]
atlas = ExtResource("2_1bai1")
region = Rect2(52, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc05a"]
atlas = ExtResource("2_1bai1")
region = Rect2(104, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nlae"]
atlas = ExtResource("2_1bai1")
region = Rect2(156, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3237"]
atlas = ExtResource("3_iwe4p")
region = Rect2(0, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1v2j"]
atlas = ExtResource("3_iwe4p")
region = Rect2(52, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_s18nm"]
atlas = ExtResource("3_iwe4p")
region = Rect2(104, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nr60"]
atlas = ExtResource("3_iwe4p")
region = Rect2(156, 104, 52, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_hm43t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecsi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11m2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf5i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfwh1")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoq60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijl6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ny4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxqp8")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0arpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvxom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22rbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4km4")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpmiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kligx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0hcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y3af")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f35u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br4ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ret6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcugi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64sgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l6vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ccjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an2pn")
}],
"loop": true,
"name": &"idle_knight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7py14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwa0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc05a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nlae")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3237")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1v2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s18nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nr60")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gcrdh"]
radius = 2.63008

[sub_resource type="CircleShape2D" id="CircleShape2D_46ao1"]
radius = 17.5772

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(18, 36)
scale = Vector2(1.966, 1.199)
collision_layer = 3
script = ExtResource("1_ud55d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 0.833)
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_hm43t")
animation = &"back_attack"
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.508646, -0.833335)
shape = SubResource("CircleShape2D_gcrdh")

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(0.508646, -0.833334)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -6.66667)
scale = Vector2(0.725, 0.725)
shape = SubResource("CircleShape2D_46ao1")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.2

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 415
limit_bottom = 256
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
limit_left = -80
limit_top = 0
limit_right = 416
limit_bottom = 239

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.223529, 0.129412, 0.964706, 1)
offset_left = -5.0
offset_top = -22.0
offset_right = 107.0
offset_bottom = 5.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="speed_boost_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SpeedBoostLabel" type="Label" parent="."]
offset_left = -32.5534
offset_top = -32.5271
offset_right = 114.447
offset_bottom = -9.5271
scale = Vector2(0.5, 0.5)
text = "Speed Boost Active
"

[node name="speed_boost_label_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpeedBoostInactiveLabel" type="Label" parent="."]
offset_left = -32.5534
offset_top = -33.3611
offset_right = 128.447
offset_bottom = -10.3611
scale = Vector2(0.5, 0.5)
text = "Speed Boost Inactive"

[node name="speed_boost_inactive_label_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="invulnerability_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="InvulnerabilityLabel" type="Label" parent="."]
offset_left = -34.588
offset_top = -33.3611
offset_right = 129.412
offset_bottom = -10.3611
scale = Vector2(0.5, 0.5)
text = "Invulnerability Active"

[node name="invulnerability_label_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="InvulnerabilityInactiveLabel" type="Label" parent="."]
offset_left = -35.0966
offset_top = -32.5271
offset_right = 141.903
offset_bottom = -9.52711
scale = Vector2(0.5, 0.5)
text = "Invulnerability Inactive"

[node name="invulnerability_inactive_label_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="teleport_reset_timer" type="Timer" parent="."]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="speed_boost_timer" to="." method="_on_speed_boost_timer_timeout"]
[connection signal="timeout" from="speed_boost_label_timer" to="." method="_on_speed_boost_label_timer_timeout"]
[connection signal="timeout" from="speed_boost_inactive_label_timer" to="." method="_on_speed_boost_inactive_label_timer_timeout"]
[connection signal="timeout" from="invulnerability_timer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="invulnerability_label_timer" to="." method="_on_invulnerability_label_timer_timeout"]
[connection signal="timeout" from="invulnerability_inactive_label_timer" to="." method="_on_invulnerability_inactive_label_timer_timeout"]
[connection signal="timeout" from="teleport_reset_timer" to="." method="_on_teleport_reset_timer_timeout"]
